--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(ucd_csi2312_pa2)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES main.cpp cluster.cpp cluster.h)
+set(SOURCE_FILES main.cpp cluster.cpp cluster.h Point.cpp Point.h Cluster.cpp Cluster.h)
 add_executable(ucd_csi2312_pa2 ${SOURCE_FILES})
